--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,6 +1,6 @@
 /* Ionic Variables and Theming. For more info, please see:
 http://ionicframework.com/docs/theming/ */
-
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Open+Sans:wght@300&display=swap');
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
